--- a/note.ipynb
+++ b/note.ipynb
@@ -2,141 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "38e81a45",
+   "execution_count": 3,
+   "id": "e9667028",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = [1.2, 2.5, 3.7, 4.6]"
+    "class sample:\n",
+    "    def __init__(self, x):\n",
+    "        self.x = x\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "a1588457",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Counter:\n",
-    "    def __init__(self, stop):\n",
-    "        self.current = -100    # 현재 숫자 유지, 0부터 지정된 숫자 직전까지 반복\n",
-    "        self.stop = stop    # 반복을 끝낼 숫자\n",
-    " \n",
-    "    def __iter__(self):\n",
-    "        return self\n",
-    "    \n",
-    "    def __next__(self):\n",
-    "        if self.current < self.stop:    # 현재 숫자가 반복을 끝낼 숫자보다 작을 때\n",
-    "            r = self.current            # 반환할 숫자를 변수에 저장\n",
-    "            self.current += 1           # 현재 숫자를 1 증가시킴\n",
-    "            return r                    # 숫자를 반환\n",
-    "        else:                           # 현재 숫자가 반복을 끝낼 숫자보다 크거나 같을 때\n",
-    "            raise StopIteration         # 예외 발"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "0071a2ff",
+   "execution_count": 4,
+   "id": "b137a845",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'Counter' object is not iterable",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = sample(1)\n",
+    "c.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c169110a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "485d4c70",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'self' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [55]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m Counter(\u001b[38;5;241m3\u001b[39m):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'Counter' object is not iterable"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [14]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m d \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mgetattr\u001b[39m(sample, \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241m.\u001b[39mx)(\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'self' is not defined"
      ]
     }
    ],
    "source": [
-    "for i in Counter(3):\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "e512665a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.7"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b.__next__()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "069469b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__class__',\n",
-       " '__delattr__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__length_hint__',\n",
-       " '__lt__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__next__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__setstate__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__']"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(b)"
+    "d = ''\n",
+    "getattr(sample, self.x)(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f6b3584",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8417394",
+   "id": "dbbff7cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -158,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
