--- a/tutorial TFRecord and tf.train.Example.ipynb
+++ b/tutorial TFRecord and tf.train.Example.ipynb
@@ -3,52 +3,56 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5f81c4c6",
+   "id": "9b653812",
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import IPython.display as display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "98a0c7a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = b'32'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "55a5ea27",
+   "execution_count": 3,
+   "id": "aa12f66b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "bytes_list {\n",
-       "  value: \"32\"\n",
-       "}"
+       "'2.8.0'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tf.train.Feature(bytes_list=tf.train.BytesList(value=[temp]))"
+    "tf.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1504ea9e",
+   "metadata": {},
+   "source": [
+    "### tf.train.Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a69cacd",
+   "metadata": {},
+   "source": [
+    "#### Data Types for tf.train.Example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "cc264ca3",
+   "execution_count": 12,
+   "id": "d35c1b29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,143 +70,117 @@
     "    return tf.train.Feature(float_list=tf.train.FloatList(value=[value]))\n",
     "\n",
     "def _int64_feature(value):\n",
-    "    \"\"\"Returns an int64_list from a bool / enum / int / uint.\"\"\"\n",
+    "    \"\"\"Returns a int64_list from a bool / enum / int / uint.\"\"\"\n",
     "    return tf.train.Feature(int64_list=tf.train.Int64List(value=[value]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "8df43d76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = {'a': tf.train.Feature(int64_list=tf.train.Int64List(value=[False]))}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "35fba123",
+   "execution_count": 16,
+   "id": "9ff7ca36",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'a': int64_list {\n",
-       "   value: 0\n",
-       " }}"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "feb5e995",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = tf.train.Example(features=tf.train.Features(feature=temp))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "468230e6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'\\n\\x0c\\n\\n\\n\\x01a\\x12\\x05\\x1a\\x03\\n\\x01\\x00'"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp.SerializeToString()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "b726ebcc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = [0, 0, 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "938cd626",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = tf.cast(temp, dtype=tf.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "c8032019",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(3,), dtype=float32, numpy=array([0., 0., 0.], dtype=float32)>"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "95c1f3c2",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "InvalidArgumentError",
-     "evalue": "Input to reshape is a tensor with 3 values, but the requested shape has 1 [Op:Reshape]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mInvalidArgumentError\u001b[0m                      Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [94]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniforge3/envs/tf25/lib/python3.8/site-packages/tensorflow/python/util/traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m--> 153\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    155\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[0;32m~/miniforge3/envs/tf25/lib/python3.8/site-packages/tensorflow/python/eager/execute.py:54\u001b[0m, in \u001b[0;36mquick_execute\u001b[0;34m(op_name, num_outputs, inputs, attrs, ctx, name)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m   ctx\u001b[38;5;241m.\u001b[39mensure_initialized()\n\u001b[0;32m---> 54\u001b[0m   tensors \u001b[38;5;241m=\u001b[39m pywrap_tfe\u001b[38;5;241m.\u001b[39mTFE_Py_Execute(ctx\u001b[38;5;241m.\u001b[39m_handle, device_name, op_name,\n\u001b[1;32m     55\u001b[0m                                       inputs, attrs, num_outputs)\n\u001b[1;32m     56\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m core\u001b[38;5;241m.\u001b[39m_NotOkStatusException \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m     57\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "\u001b[0;31mInvalidArgumentError\u001b[0m: Input to reshape is a tensor with 3 values, but the requested shape has 1 [Op:Reshape]"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bytes_list {\n",
+      "  value: \"test_string\"\n",
+      "}\n",
+      "\n",
+      "bytes_list {\n",
+      "  value: \"test_bytes\"\n",
+      "}\n",
+      "\n",
+      "float_list {\n",
+      "  value: 2.7182817459106445\n",
+      "}\n",
+      "\n",
+      "int64_list {\n",
+      "  value: 1\n",
+      "}\n",
+      "\n",
+      "int64_list {\n",
+      "  value: 1\n",
+      "}\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "tf.reshape(temp, ())"
+    "print(_bytes_feature(b'test_string'))\n",
+    "print(_bytes_feature(u'test_bytes'.encode('utf-8')))\n",
+    "\n",
+    "print(_float_feature(np.exp(1)))\n",
+    "\n",
+    "print(_int64_feature(True))\n",
+    "print(_int64_feature(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "67952a30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float_list {\n",
+      "  value: 2.7182817459106445\n",
+      "}\n",
+      " \n",
+      " <class 'tensorflow.core.example.feature_pb2.Feature'>\n",
+      "b'\\x12\\x06\\n\\x04T\\xf8-@'\n",
+      "b'\\x12\\x06\\n\\x04BD@@'\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature = _float_feature(np.exp(1))\n",
+    "feature1 = _float_feature(np.exp(1.1))\n",
+    "print(feature, '\\n', type(feature))\n",
+    "print(feature.SerializeToString())\n",
+    "print(feature1.SerializeToString())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e272cf3c",
+   "metadata": {},
+   "source": [
+    "#### Creating a tf.train."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a32ab649",
+   "id": "142c57d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8669c3ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99073977",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0daf8b17",
    "metadata": {},
    "outputs": [],
    "source": []
