--- a/tutorial TFRecord and tf.train.Example.ipynb
+++ b/tutorial TFRecord and tf.train.Example.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "aa12f66b",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
        "'2.8.0'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "d35c1b29",
    "metadata": {},
    "outputs": [],
@@ -76,14 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "9ff7ca36",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Metal device set to: Apple M1\n",
       "bytes_list {\n",
       "  value: \"test_string\"\n",
       "}\n",
@@ -93,7 +96,7 @@
       "}\n",
       "\n",
       "float_list {\n",
-      "  value: 2.7182817459106445\n",
+      "  value: 2.7182817\n",
       "}\n",
       "\n",
       "int64_list {\n",
@@ -104,6 +107,14 @@
       "  value: 1\n",
       "}\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-10 08:14:11.101949: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2022-08-10 08:14:11.102244: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
      ]
     }
    ],
@@ -119,16 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "67952a30",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "float_list {\n",
-      "  value: 2.7182817459106445\n",
+      "  value: 2.7182817\n",
       "}\n",
       " \n",
       " <class 'tensorflow.core.example.feature_pb2.Feature'>\n",
@@ -155,16 +168,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "142c57d5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n_observations = int(1e4)\n",
+    "\n",
+    "feature0 = np.random.choice([False, True], n_observations)\n",
+    "\n",
+    "feature1 = np.random.randint(0, 5, n_observations)\n",
+    "\n",
+    "strings = np.array([b'cat', b'dog', b'chicken', b'horse', b'goat'])\n",
+    "feature2 = strings[feature1] # you can't make random string list if you use list type\n",
+    "\n",
+    "feature3 = np.random.randn(n_observations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "1d01b7fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def serialize_example(feature0, feature1, feature2, feature3):\n",
+    "    feature = {\n",
+    "        'feature0': _int64_feature(feature0),\n",
+    "        'feature1': _int64_feature(feature1),\n",
+    "        'feature2': _bytes_feature(feature2),\n",
+    "        'feature3': _float_feature(feature3),\n",
+    "    }\n",
+    "    \n",
+    "    example_proto = tf.train.Example(features=tf.train.Features(feature=feature))\n",
+    "    return example_proto.SerializeToString()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "b0e2a9fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\nR\\n\\x11\\n\\x08feature0\\x12\\x05\\x1a\\x03\\n\\x01\\x00\\n\\x11\\n\\x08feature1\\x12\\x05\\x1a\\x03\\n\\x01\\x04\\n\\x14\\n\\x08feature2\\x12\\x08\\n\\x06\\n\\x04goat\\n\\x14\\n\\x08feature3\\x12\\x08\\x12\\x06\\n\\x04[\\xd3|?'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example_observation = []\n",
+    "\n",
+    "serialized_example = serialize_example(False, 4, b'goat', 0.9876)\n",
+    "serialized_example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "5ce0c4c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "features {\n",
+       "  feature {\n",
+       "    key: \"feature0\"\n",
+       "    value {\n",
+       "      int64_list {\n",
+       "        value: 0\n",
+       "      }\n",
+       "    }\n",
+       "  }\n",
+       "  feature {\n",
+       "    key: \"feature1\"\n",
+       "    value {\n",
+       "      int64_list {\n",
+       "        value: 4\n",
+       "      }\n",
+       "    }\n",
+       "  }\n",
+       "  feature {\n",
+       "    key: \"feature2\"\n",
+       "    value {\n",
+       "      bytes_list {\n",
+       "        value: \"goat\"\n",
+       "      }\n",
+       "    }\n",
+       "  }\n",
+       "  feature {\n",
+       "    key: \"feature3\"\n",
+       "    value {\n",
+       "      float_list {\n",
+       "        value: 0.9876\n",
+       "      }\n",
+       "    }\n",
+       "  }\n",
+       "}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example_proto = tf.train.Example.FromString(serialized_example)\n",
+    "example_proto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd48e285",
+   "metadata": {},
+   "source": [
+    "### TFRecords format details"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "fbad9ed4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2608478384.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [52]\u001b[0;36m\u001b[0m\n\u001b[0;31m    uint64 length\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# uint64 length\n",
+    "# uint32 masked_crc32_of_length\n",
+    "# byte   data[length]\n",
+    "# uint32 masked_crc32_of_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "295f13dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2594528164.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [53]\u001b[0;36m\u001b[0m\n\u001b[0;31m    masked_crc = ((crc >> 15) | (crc << 17)) + 0xa282ead8ul\u001b[0m\n\u001b[0m                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# masked_crc = ((crc >> 15) | (crc << 17)) + 0xa282ead8ul"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e8c397f",
+   "metadata": {},
+   "source": [
+    "### TFRecord files using tf.data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69dc0e62",
+   "metadata": {},
+   "source": [
+    "#### Writing a TFRecord file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "6e9d6f7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<TensorSliceDataset element_spec=TensorSpec(shape=(), dtype=tf.int64, name=None)>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.data.Dataset.from_tensor_slices(feature1)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8669c3ed",
+   "id": "7a69792e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -172,7 +380,111 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99073977",
+   "id": "fbb75a21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8b5a2ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b826b20e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62240cc5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ecff267",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d35c6796",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4163120",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8644efe0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03413282",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "011f13b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6b38b8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a773842f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dda76168",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cf8f415",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -202,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
