--- a/note.ipynb
+++ b/note.ipynb
@@ -2,86 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e9667028",
+   "execution_count": 1,
+   "id": "20781530",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class sample:\n",
-    "    def __init__(self, x):\n",
-    "        self.x = x\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b137a845",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c = sample(1)\n",
-    "c.x"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c169110a",
+   "id": "5a73db06",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "c.x"
+    "path = 'D:/winston/Desktop/새 폴더/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "485d4c70",
+   "execution_count": 6,
+   "id": "355146d9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'self' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [14]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m d \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mgetattr\u001b[39m(sample, \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241m.\u001b[39mx)(\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'self' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a477a1d3",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "d = ''\n",
-    "getattr(sample, self.x)(1)"
+    "files = os.listdir(path)\n",
+    "files = [file for file in files if 'tek' in file]\n",
+    "files.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0e61cac5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in files:\n",
+    "    num = int(file[3:8])\n",
+    "    if 27750 <= num <= 30099:\n",
+    "        src = path + file\n",
+    "        dst = path + 'test69/' + file\n",
+    "        os.rename(src, dst)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbbff7cd",
+   "id": "c12456f5",
    "metadata": {},
    "outputs": [],
    "source": []
