--- a/note.ipynb
+++ b/note.ipynb
@@ -7,52 +7,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import tensorflow as tf\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5a73db06",
+   "execution_count": null,
+   "id": "d402134a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'D:/winston/Desktop/새 폴더/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "355146d9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "a477a1d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files = os.listdir(path)\n",
-    "files = [file for file in files if 'tek' in file]\n",
-    "files.sort()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "0e61cac5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for file in files:\n",
-    "    num = int(file[3:8])\n",
-    "    if 27750 <= num <= 30099:\n",
-    "        src = path + file\n",
-    "        dst = path + 'test69/' + file\n",
-    "        os.rename(src, dst)"
+    "def _bytes_feature(value):\n",
+    "    \"\"\"Returns a bytes_list from a string / byte.\"\"\"\n",
+    "    if isinstance(value, type(tf.constant(0))):\n",
+    "        value = value.numpy() # BytesList won't unpack a string from an EagerTensor.\n",
+    "    return tf.train.Feature(bytes_list=tf.train.BytesList(value=[value]))\n",
+    "\n",
+    "def _float_feature(value):\n",
+    "    \"\"\"Returns a float_list from a float / double.\"\"\"\n",
+    "    return tf.train.Feature(float_list=tf.train.FloatList(value=[value]))\n",
+    "\n",
+    "def _int64_feature(value):\n",
+    "    \"\"\"Returns a int64_list from a bool / enum / int / uint.\"\"\"\n",
+    "    return tf.train.Feature(int64_list=tf.train.Int64List(value=[value]))"
    ]
   },
   {
@@ -61,7 +39,18 @@
    "id": "c12456f5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def serialize_example(feature0, feature1, feature2, feature3):\n",
+    "    feature = {\n",
+    "        'feature0': _int64_feature(feature0),\n",
+    "        'feature1': _int64_feature(feature1),\n",
+    "        'feature2': _bytes_feature(feature2),\n",
+    "        'feature3': _float_feature(feature3),\n",
+    "    }\n",
+    "    \n",
+    "    example_proto = tf.train.Example(features=tf.train.Features(feature=feature))\n",
+    "    return example_proto.SerializeToString()"
+   ]
   }
  ],
  "metadata": {
