--- a/tutorial TFRecord and tf.train.Example.ipynb
+++ b/tutorial TFRecord and tf.train.Example.ipynb
@@ -78,15 +78,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "9ff7ca36",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Metal device set to: Apple M1\n",
       "bytes_list {\n",
       "  value: \"test_string\"\n",
       "}\n",
@@ -96,7 +93,7 @@
       "}\n",
       "\n",
       "float_list {\n",
-      "  value: 2.7182817\n",
+      "  value: 2.7182817459106445\n",
       "}\n",
       "\n",
       "int64_list {\n",
@@ -107,14 +104,6 @@
       "  value: 1\n",
       "}\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-08-10 08:14:11.101949: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2022-08-10 08:14:11.102244: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
      ]
     }
    ],
@@ -132,16 +121,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "67952a30",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "float_list {\n",
-      "  value: 2.7182817\n",
+      "  value: 2.7182817459106445\n",
       "}\n",
       " \n",
       " <class 'tensorflow.core.example.feature_pb2.Feature'>\n",
@@ -168,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "142c57d5",
    "metadata": {},
    "outputs": [],
@@ -187,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "1d01b7fd",
    "metadata": {},
    "outputs": [],
@@ -206,17 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "b0e2a9fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'\\nR\\n\\x11\\n\\x08feature0\\x12\\x05\\x1a\\x03\\n\\x01\\x00\\n\\x11\\n\\x08feature1\\x12\\x05\\x1a\\x03\\n\\x01\\x04\\n\\x14\\n\\x08feature2\\x12\\x08\\n\\x06\\n\\x04goat\\n\\x14\\n\\x08feature3\\x12\\x08\\x12\\x06\\n\\x04[\\xd3|?'"
+       "b'\\nR\\n\\x14\\n\\x08feature2\\x12\\x08\\n\\x06\\n\\x04goat\\n\\x14\\n\\x08feature3\\x12\\x08\\x12\\x06\\n\\x04[\\xd3|?\\n\\x11\\n\\x08feature1\\x12\\x05\\x1a\\x03\\n\\x01\\x04\\n\\x11\\n\\x08feature0\\x12\\x05\\x1a\\x03\\n\\x01\\x00'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "5ce0c4c9",
    "metadata": {},
    "outputs": [
@@ -266,14 +253,14 @@
        "    key: \"feature3\"\n",
        "    value {\n",
        "      float_list {\n",
-       "        value: 0.9876\n",
+       "        value: 0.9876000285148621\n",
        "      }\n",
        "    }\n",
        "  }\n",
        "}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,19 +280,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "fbad9ed4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2608478384.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [52]\u001b[0;36m\u001b[0m\n\u001b[0;31m    uint64 length\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# uint64 length\n",
     "# uint32 masked_crc32_of_length\n",
@@ -315,19 +293,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "295f13dd",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2594528164.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [53]\u001b[0;36m\u001b[0m\n\u001b[0;31m    masked_crc = ((crc >> 15) | (crc << 17)) + 0xa282ead8ul\u001b[0m\n\u001b[0m                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# masked_crc = ((crc >> 15) | (crc << 17)) + 0xa282ead8ul"
    ]
@@ -350,17 +319,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "id": "6e9d6f7f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<TensorSliceDataset element_spec=TensorSpec(shape=(), dtype=tf.int64, name=None)>"
+       "<TensorSliceDataset element_spec=TensorSpec(shape=(), dtype=tf.int32, name=None)>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,107 +340,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "7a69792e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<TensorSliceDataset element_spec=(TensorSpec(shape=(), dtype=tf.bool, name=None), TensorSpec(shape=(), dtype=tf.int32, name=None), TensorSpec(shape=(), dtype=tf.string, name=None), TensorSpec(shape=(), dtype=tf.float64, name=None))>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_dataset = tf.data.Dataset.from_tensor_slices((feature0, feature1, feature2, feature3))\n",
+    "features_dataset"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "fbb75a21",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(True, shape=(), dtype=bool) \n",
+      " tf.Tensor(0, shape=(), dtype=int32) \n",
+      " tf.Tensor(b'cat', shape=(), dtype=string) \n",
+      " tf.Tensor(0.318821956338708, shape=(), dtype=float64)\n",
+      "True 0 b'cat' 0.318821956338708\n",
+      "True 0 b'cat' 0.318821956338708\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a, b, c, d in features_dataset.take(1):\n",
+    "    print(a, '\\n', b, '\\n', c, '\\n', d)\n",
+    "    print(a.numpy(),  b.numpy(), c.numpy(), d.numpy())\n",
+    "print(feature0[0], feature1[0], feature2[0], feature3[0])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b8b5a2ed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b826b20e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def tf_serialize_example(f0, f1, f2, f3):\n",
+    "    tf_string = tf.py_function(serialize_example, \n",
+    "                              (f0, f1, f2, f3),\n",
+    "                              tf.string)\n",
+    "    return tf.reshape(tf_string, ())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "62240cc5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=string, numpy=b'\\nQ\\n\\x14\\n\\x08feature3\\x12\\x08\\x12\\x06\\n\\x04\\xa2<\\xa3>\\n\\x11\\n\\x08feature1\\x12\\x05\\x1a\\x03\\n\\x01\\x00\\n\\x13\\n\\x08feature2\\x12\\x07\\n\\x05\\n\\x03cat\\n\\x11\\n\\x08feature0\\x12\\x05\\x1a\\x03\\n\\x01\\x01'>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf_serialize_example(a, b, c, d)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5ecff267",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<MapDataset element_spec=TensorSpec(shape=(), dtype=tf.string, name=None)>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serialized_features_dataset = features_dataset.map(tf_serialize_example)\n",
+    "serialized_features_dataset"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d35c6796",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def generator():\n",
+    "    for features in features_dataset:\n",
+    "        yield serialize_example(*features)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e4163120",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "serialized_features_dataset = tf.data.Dataset.from_generator(generator,\n",
+    "                                                            output_types=tf.string,\n",
+    "                                                            output_shapes=())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8644efe0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<FlatMapDataset element_spec=TensorSpec(shape=(), dtype=tf.string, name=None)>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serialized_features_dataset"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03413282",
+   "cell_type": "markdown",
+   "id": "ccc04090",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "And write them to a TFRecord file:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "011f13b0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\winston\\AppData\\Local\\Temp\\ipykernel_2488\\3575438268.py:2: TFRecordWriter.__init__ (from tensorflow.python.data.experimental.ops.writers) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "To write TFRecords to disk, use `tf.io.TFRecordWriter`. To save and load the contents of a dataset, use `tf.data.experimental.save` and `tf.data.experimental.load`\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = 'test.tfrecord'\n",
+    "writer = tf.data.experimental.TFRecordWriter(filename)\n",
+    "writer.write(serialized_features_dataset)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6b38b8e",
+   "cell_type": "markdown",
+   "id": "c00cf41c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Reading a TFRecord file"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a773842f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<TFRecordDatasetV2 element_spec=TensorSpec(shape=(), dtype=tf.string, name=None)>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filenames = [filename]\n",
+    "raw_dataset = tf.data.TFRecordDataset(filenames)\n",
+    "raw_dataset"
+   ]
   },
   {
    "cell_type": "code",
@@ -514,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
