--- a/tutorial TFRecord and tf.train.Example.ipynb
+++ b/tutorial TFRecord and tf.train.Example.ipynb
@@ -21,7 +21,7 @@
     {
      "data": {
       "text/plain": [
-       "'2.8.0'"
+       "'2.9.0'"
       ]
      },
      "execution_count": 2,
@@ -84,6 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Metal device set to: Apple M1\n",
       "bytes_list {\n",
       "  value: \"test_string\"\n",
       "}\n",
@@ -93,7 +94,7 @@
       "}\n",
       "\n",
       "float_list {\n",
-      "  value: 2.7182817459106445\n",
+      "  value: 2.7182817\n",
       "}\n",
       "\n",
       "int64_list {\n",
@@ -104,6 +105,14 @@
       "  value: 1\n",
       "}\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-11 08:49:45.984244: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2022-08-11 08:49:45.984714: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
      ]
     }
    ],
@@ -128,7 +137,7 @@
      "output_type": "stream",
      "text": [
       "float_list {\n",
-      "  value: 2.7182817459106445\n",
+      "  value: 2.7182817\n",
       "}\n",
       " \n",
       " <class 'tensorflow.core.example.feature_pb2.Feature'>\n",
@@ -200,7 +209,7 @@
     {
      "data": {
       "text/plain": [
-       "b'\\nR\\n\\x14\\n\\x08feature2\\x12\\x08\\n\\x06\\n\\x04goat\\n\\x14\\n\\x08feature3\\x12\\x08\\x12\\x06\\n\\x04[\\xd3|?\\n\\x11\\n\\x08feature1\\x12\\x05\\x1a\\x03\\n\\x01\\x04\\n\\x11\\n\\x08feature0\\x12\\x05\\x1a\\x03\\n\\x01\\x00'"
+       "b'\\nR\\n\\x11\\n\\x08feature0\\x12\\x05\\x1a\\x03\\n\\x01\\x00\\n\\x11\\n\\x08feature1\\x12\\x05\\x1a\\x03\\n\\x01\\x04\\n\\x14\\n\\x08feature2\\x12\\x08\\n\\x06\\n\\x04goat\\n\\x14\\n\\x08feature3\\x12\\x08\\x12\\x06\\n\\x04[\\xd3|?'"
       ]
      },
      "execution_count": 8,
@@ -253,7 +262,7 @@
        "    key: \"feature3\"\n",
        "    value {\n",
        "      float_list {\n",
-       "        value: 0.9876000285148621\n",
+       "        value: 0.9876\n",
        "      }\n",
        "    }\n",
        "  }\n",
@@ -326,7 +335,7 @@
     {
      "data": {
       "text/plain": [
-       "<TensorSliceDataset element_spec=TensorSpec(shape=(), dtype=tf.int32, name=None)>"
+       "<TensorSliceDataset element_spec=TensorSpec(shape=(), dtype=tf.int64, name=None)>"
       ]
      },
      "execution_count": 12,
@@ -347,7 +356,7 @@
     {
      "data": {
       "text/plain": [
-       "<TensorSliceDataset element_spec=(TensorSpec(shape=(), dtype=tf.bool, name=None), TensorSpec(shape=(), dtype=tf.int32, name=None), TensorSpec(shape=(), dtype=tf.string, name=None), TensorSpec(shape=(), dtype=tf.float64, name=None))>"
+       "<TensorSliceDataset element_spec=(TensorSpec(shape=(), dtype=tf.bool, name=None), TensorSpec(shape=(), dtype=tf.int64, name=None), TensorSpec(shape=(), dtype=tf.string, name=None), TensorSpec(shape=(), dtype=tf.float64, name=None))>"
       ]
      },
      "execution_count": 13,
@@ -371,11 +380,11 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(True, shape=(), dtype=bool) \n",
-      " tf.Tensor(0, shape=(), dtype=int32) \n",
-      " tf.Tensor(b'cat', shape=(), dtype=string) \n",
-      " tf.Tensor(0.318821956338708, shape=(), dtype=float64)\n",
-      "True 0 b'cat' 0.318821956338708\n",
-      "True 0 b'cat' 0.318821956338708\n"
+      " tf.Tensor(4, shape=(), dtype=int64) \n",
+      " tf.Tensor(b'goat', shape=(), dtype=string) \n",
+      " tf.Tensor(1.039732709347987, shape=(), dtype=float64)\n",
+      "True 4 b'goat' 1.039732709347987\n",
+      "True 4 b'goat' 1.039732709347987\n"
      ]
     }
    ],
@@ -407,14 +416,60 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(), dtype=string, numpy=b'\\nQ\\n\\x14\\n\\x08feature3\\x12\\x08\\x12\\x06\\n\\x04\\xa2<\\xa3>\\n\\x11\\n\\x08feature1\\x12\\x05\\x1a\\x03\\n\\x01\\x00\\n\\x13\\n\\x08feature2\\x12\\x07\\n\\x05\\n\\x03cat\\n\\x11\\n\\x08feature0\\x12\\x05\\x1a\\x03\\n\\x01\\x01'>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-11 08:50:00.367405: W tensorflow/core/framework/op_kernel.cc:1733] INVALID_ARGUMENT: TypeError: <tf.Tensor: shape=(), dtype=bool, numpy=True> has type <class 'tensorflow.python.framework.ops.EagerTensor'>, but expected one of: (<class 'int'>,)\n",
+      "Traceback (most recent call last):\n",
+      "\n",
+      "  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/ops/script_ops.py\", line 268, in __call__\n",
+      "    return func(device, token, args)\n",
+      "\n",
+      "  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/ops/script_ops.py\", line 146, in __call__\n",
+      "    outputs = self._call(device, args)\n",
+      "\n",
+      "  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/ops/script_ops.py\", line 153, in _call\n",
+      "    ret = self._func(*args)\n",
+      "\n",
+      "  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/autograph/impl/api.py\", line 642, in wrapper\n",
+      "    return func(*args, **kwargs)\n",
+      "\n",
+      "  File \"/var/folders/99/s34zzfr57xs9_1q57tnxdmrr0000gn/T/ipykernel_24837/1663365771.py\", line 3, in serialize_example\n",
+      "    'feature0': _int64_feature(feature0),\n",
+      "\n",
+      "  File \"/var/folders/99/s34zzfr57xs9_1q57tnxdmrr0000gn/T/ipykernel_24837/2824841238.py\", line 16, in _int64_feature\n",
+      "    return tf.train.Feature(int64_list=tf.train.Int64List(value=[value]))\n",
+      "\n",
+      "  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/google/protobuf/internal/python_message.py\", line 542, in init\n",
+      "    copy.extend(field_value)\n",
+      "\n",
+      "  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/google/protobuf/internal/containers.py\", line 143, in extend\n",
+      "    new_values = [self._type_checker.CheckValue(elem) for elem in elem_seq_iter]\n",
+      "\n",
+      "  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/google/protobuf/internal/containers.py\", line 143, in <listcomp>\n",
+      "    new_values = [self._type_checker.CheckValue(elem) for elem in elem_seq_iter]\n",
+      "\n",
+      "  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/google/protobuf/internal/type_checkers.py\", line 155, in CheckValue\n",
+      "    raise TypeError(message)\n",
+      "\n",
+      "TypeError: <tf.Tensor: shape=(), dtype=bool, numpy=True> has type <class 'tensorflow.python.framework.ops.EagerTensor'>, but expected one of: (<class 'int'>,)\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "InvalidArgumentError",
+     "evalue": "TypeError: <tf.Tensor: shape=(), dtype=bool, numpy=True> has type <class 'tensorflow.python.framework.ops.EagerTensor'>, but expected one of: (<class 'int'>,)\nTraceback (most recent call last):\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/ops/script_ops.py\", line 268, in __call__\n    return func(device, token, args)\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/ops/script_ops.py\", line 146, in __call__\n    outputs = self._call(device, args)\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/ops/script_ops.py\", line 153, in _call\n    ret = self._func(*args)\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/autograph/impl/api.py\", line 642, in wrapper\n    return func(*args, **kwargs)\n\n  File \"/var/folders/99/s34zzfr57xs9_1q57tnxdmrr0000gn/T/ipykernel_24837/1663365771.py\", line 3, in serialize_example\n    'feature0': _int64_feature(feature0),\n\n  File \"/var/folders/99/s34zzfr57xs9_1q57tnxdmrr0000gn/T/ipykernel_24837/2824841238.py\", line 16, in _int64_feature\n    return tf.train.Feature(int64_list=tf.train.Int64List(value=[value]))\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/google/protobuf/internal/python_message.py\", line 542, in init\n    copy.extend(field_value)\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/google/protobuf/internal/containers.py\", line 143, in extend\n    new_values = [self._type_checker.CheckValue(elem) for elem in elem_seq_iter]\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/google/protobuf/internal/containers.py\", line 143, in <listcomp>\n    new_values = [self._type_checker.CheckValue(elem) for elem in elem_seq_iter]\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/google/protobuf/internal/type_checkers.py\", line 155, in CheckValue\n    raise TypeError(message)\n\nTypeError: <tf.Tensor: shape=(), dtype=bool, numpy=True> has type <class 'tensorflow.python.framework.ops.EagerTensor'>, but expected one of: (<class 'int'>,)\n\n [Op:EagerPyFunc]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mInvalidArgumentError\u001b[0m                      Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [16]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtf_serialize_example\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43md\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36mtf_serialize_example\u001b[0;34m(f0, f1, f2, f3)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtf_serialize_example\u001b[39m(f0, f1, f2, f3):\n\u001b[0;32m----> 2\u001b[0m     tf_string \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpy_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43mserialize_example\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m                              \u001b[49m\u001b[43m(\u001b[49m\u001b[43mf0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf3\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m                              \u001b[49m\u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstring\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mreshape(tf_string, ())\n",
+      "File \u001b[0;32m~/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/util/traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m--> 153\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    155\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m~/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/framework/ops.py:7164\u001b[0m, in \u001b[0;36mraise_from_not_ok_status\u001b[0;34m(e, name)\u001b[0m\n\u001b[1;32m   7162\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mraise_from_not_ok_status\u001b[39m(e, name):\n\u001b[1;32m   7163\u001b[0m   e\u001b[38;5;241m.\u001b[39mmessage \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m name: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m name \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m-> 7164\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m core\u001b[38;5;241m.\u001b[39m_status_to_exception(e) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n",
+      "\u001b[0;31mInvalidArgumentError\u001b[0m: TypeError: <tf.Tensor: shape=(), dtype=bool, numpy=True> has type <class 'tensorflow.python.framework.ops.EagerTensor'>, but expected one of: (<class 'int'>,)\nTraceback (most recent call last):\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/ops/script_ops.py\", line 268, in __call__\n    return func(device, token, args)\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/ops/script_ops.py\", line 146, in __call__\n    outputs = self._call(device, args)\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/ops/script_ops.py\", line 153, in _call\n    ret = self._func(*args)\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/tensorflow/python/autograph/impl/api.py\", line 642, in wrapper\n    return func(*args, **kwargs)\n\n  File \"/var/folders/99/s34zzfr57xs9_1q57tnxdmrr0000gn/T/ipykernel_24837/1663365771.py\", line 3, in serialize_example\n    'feature0': _int64_feature(feature0),\n\n  File \"/var/folders/99/s34zzfr57xs9_1q57tnxdmrr0000gn/T/ipykernel_24837/2824841238.py\", line 16, in _int64_feature\n    return tf.train.Feature(int64_list=tf.train.Int64List(value=[value]))\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/google/protobuf/internal/python_message.py\", line 542, in init\n    copy.extend(field_value)\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/google/protobuf/internal/containers.py\", line 143, in extend\n    new_values = [self._type_checker.CheckValue(elem) for elem in elem_seq_iter]\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/google/protobuf/internal/containers.py\", line 143, in <listcomp>\n    new_values = [self._type_checker.CheckValue(elem) for elem in elem_seq_iter]\n\n  File \"/Users/rainyseason/miniforge3/envs/tf29/lib/python3.10/site-packages/google/protobuf/internal/type_checkers.py\", line 155, in CheckValue\n    raise TypeError(message)\n\nTypeError: <tf.Tensor: shape=(), dtype=bool, numpy=True> has type <class 'tensorflow.python.framework.ops.EagerTensor'>, but expected one of: (<class 'int'>,)\n\n [Op:EagerPyFunc]"
+     ]
     }
    ],
    "source": [
@@ -423,21 +478,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "id": "96dbe6a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "serialize_example(False, 1, b'dog', -0.410451315502222)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f3d1579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf_serialize_example(False, 1, b'dog', -0.410451315502222)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5ecff267",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<MapDataset element_spec=TensorSpec(shape=(), dtype=tf.string, name=None)>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serialized_features_dataset = features_dataset.map(tf_serialize_example)\n",
     "serialized_features_dataset"
@@ -445,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d35c6796",
    "metadata": {},
    "outputs": [],
@@ -457,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e4163120",
    "metadata": {},
    "outputs": [],
@@ -469,21 +533,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8644efe0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<FlatMapDataset element_spec=TensorSpec(shape=(), dtype=tf.string, name=None)>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serialized_features_dataset"
    ]
@@ -498,20 +551,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "011f13b0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\winston\\AppData\\Local\\Temp\\ipykernel_2488\\3575438268.py:2: TFRecordWriter.__init__ (from tensorflow.python.data.experimental.ops.writers) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "To write TFRecords to disk, use `tf.io.TFRecordWriter`. To save and load the contents of a dataset, use `tf.data.experimental.save` and `tf.data.experimental.load`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filename = 'test.tfrecord'\n",
     "writer = tf.data.experimental.TFRecordWriter(filename)\n",
@@ -528,21 +571,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "a773842f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<TFRecordDatasetV2 element_spec=TensorSpec(shape=(), dtype=tf.string, name=None)>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "filenames = [filename]\n",
     "raw_dataset = tf.data.TFRecordDataset(filenames)\n",
@@ -576,9 +608,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf25",
+   "display_name": "tf29",
    "language": "python",
-   "name": "tf25"
+   "name": "tf29"
   },
   "language_info": {
    "codemirror_mode": {
@@ -590,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
